feat: finished functional part of login feature #9 chore: added https to frontend chore: added bad credential handler to backend chore: adjusted cors config to be more explicit about allowed headers chore: cleaned up imports feat: added login functions to frontend form chore: moved env to nuxt format todo: add message displays and i18n compatibility